--- a/fixture/enterprise/core/Mage/GiftWrapping/data/GiftWrapping.yml
+++ b/fixture/enterprise/core/Mage/GiftWrapping/data/GiftWrapping.yml
@@ -28,13 +28,10 @@
 #*********************************************
 #*      Gift Wrapping on Product Page        *
 #*********************************************
-product_gift_message_and_wrapping_all_enable:
-    gift_options_allow_gift_message_default: No
-    gift_options_allow_gift_message: Yes
-    gift_options_allow_gift_wrapping_default: No
-    gift_options_allow_gift_wrapping: Yes
-    gift_options_price_for_gift_wrapping: 1.01
-
+gift_options_use_default:
+    gift_options_allow_gift_message_default: Yes
+    gift_options_allow_gift_wrapping_default: Yes
+    gift_options_price_for_gift_wrapping: ''
 
 gift_options_message_yes_wrapping_yes:
     gift_options_allow_gift_message_default: No
