[TESTS][UIMAP][HELPER] MAUTOSEL-426 Restore GiftWrapping tests

--- a/fixture/enterprise/core/Mage/Product/uimap/admin/Product.yml
+++ b/fixture/enterprise/core/Mage/Product/uimap/admin/Product.yml
@@ -58,6 +58,9 @@ edit_product:
 edit_saved_product:
     uimap: *newProduct
 
+edit_product_save_and_continue:
+    uimap: *newProduct
+
 create_empty_simple_from_configurable:
     uimap: *newProduct
 
