[TESTS][UIMAP] MAUTOSEL-426 Fix tests

--- a/fixture/enterprise/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
+++ b/fixture/enterprise/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
@@ -34,5 +34,6 @@ view_order:
                         fieldsets:
                            -
                                 gift_options_for_order:
+                                    xpath: //div[div/h4[contains(text(),'Gift Options')]]
                                     pageelements:
                                         printed_card_price: //div[@id='price-card-box']//span[@class='price']//span[@class='price']
