--- a/fixture/default/core/Mage/Category/uimap/admin/Category.yml
+++ b/fixture/default/core/Mage/Category/uimap/admin/Category.yml
@@ -46,7 +46,7 @@ manage_categories:
                             root_category: //ul/div/li[contains(div/a/span,'%rootName%')]
                             sub_category: //*[@id='%parentCategoryId%']/ancestor::li/ul/li[contains(div/a/span,'%subName%') and not(div/a/span/@id='%parentCategoryId%')]
                             expand_category: //*[@id='%parentCategoryId%']/ancestor::div/img[contains(@class,'x-tree-elbow-plus') or contains(@class,'x-tree-elbow-end-plus')]
-                        dropdpwns:
+                        dropdowns:
                             choose_store_view: //select[@id='store_switcher']
             tabs:
                 -
